# python-profiling-workshop

./: README.md  pyproject.toml
01_cprofile/: bench_game_of_chance.py  corrector.py  game_of_chance.py  measure_play_game.py
02_line_profile/: SimulatedDataset.py  count_words.py  gatsby.txt  julia.py
03_memory_profiler/: SimulatedDataset.py  shapes.py  social_net.py
04_profile_on_the_fly/: async.py  social_net.py  social_net_async.py
workshop/: misc.py  service.py
