[project]

name = "workshop"
version = "0.0.1"
description = "Python profiling workshop"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Pavel Filonov", email = "filonovpv@gmail.com"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pytest==7.4.0",
    "pytest-benchmark==4.0.0",
    "pytest-profiling==1.7.0",
    "line-profiler==4.0.3",
    "numpy==1.25.1",
    "snakeviz==2.2.0",
    "pandas==2.0.3",
    "memory-profiler==0.61.0",
    "matplotlib==3.7.2",
    "py-spy==0.3.14",
    "fastapi==0.100.0",
    "uvicorn==0.23.1",
    "requests==2.31.0",
    "aiohttp==3.8.5",
]

[tool.setuptools]
packages = [
    "workshop",
]